--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.0",
     "sass": "^1.76.0",
     "zustand": "^4.5.2"
